reupload files with correct google analytics code

--- a/index.html
+++ b/index.html
@@ -303,7 +303,9 @@
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-          ga('create', 'UA-41706969-1', 'patrickgrey.co.uk');
+          // ga('create', 'UA-41706969-1', 'patrickgrey.co.uk/');
+          ga('create', 'UA-41706969-2', 'patrickgrey.github.io/');
+
           ga('send', 'pageview');
         </script>
 
